--- a/index.html
+++ b/index.html
@@ -1,22 +1,87 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>WEB1 - Welcome!!</title>
+  <title>WEB1-Welcome!!!</title>
   <meta charset="utf-8">
 </head>
+
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li>.<a href="1.html">html</a></li>
-    <li>.<a href="2.html">CSS</a></li>
-    <li>.<a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Html</a></li>
+    <li><a href="2.html">Css</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
 
+  <h2>WEB</h2>
+  <p>월드 와이드 웹(World Wide Web, WWW, W3)은
+    인터넷에 연결된 컴퓨터
+    를 통해 사람들이 정보를 공
+    유할 수 있는 전 세계적인 정보 공간을 말한다. 간단
+    히 웹(Web)이라 부 르는 경우가 많다. 이 용어는 인터
+    넷과 동의어로 쓰이는 경우가 많으나 엄격히 말해 서로 다른 개념
+    이다. 웹은 전자 메일과 같이 인터넷 상에서 동작하는 하나의 서비스일 뿐이다. 그러
+    나 1993년 이래로 웹은 인터넷 구조의 절대적 위치를 차지하고 있다.
 
-  <H2>WEB</H2>
-  <P>자바스크립트(영어: JavaScript)는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며, 다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다. 또한 Node.js와 같은 런타임 환경과 같이 서버 프로그래밍에도 사용되고 있다. 자바스크립트는 본래 넷스케이프 커뮤니케이션즈 코퍼레이션의 브렌던 아이크(Brendan Eich)가 처음에는 모카(Mocha)라는 이름으로, 나중에는 라이브스크립트(LiveScript)라는 이름으로 개발하였으며, 최종적으로 자바스크립트가 되었다. 자바스크립트가 썬 마이크로시스템즈의 자바와 구문이 유사한 점도 있지만, 이는 사실 두 언어 모두 C 언어의 기본 구문에 바탕을 뒀기 때문이고, 자바와 자바스크립트는 직접적인 관련성이 없다. 이름과 구문 외에는 자바보다 셀프나 스킴과 유사성이 많다.
 
+    인터넷에서 HTTP 프로토콜,
+    하이퍼텍스트, HTML형식 등을
+    사용하여 그림과 문자를 교환하는 전송방식을 말하기도 한다.
+  </p>
+  <p>
+    <iframe width="700" height="500" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
   </p>
 
-</body>
+  <p>하이퍼텍스트 마크업 언어(HyperText Markup Language, HTML, 문화어: 초본문표식달기언어,
+    하이퍼본문표식달기언어)는 웹 페이지를 위한 지배적인 마크업
+    언어다. HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만
+    아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고
+    이미지와 객체를 내장하고 대화형 양식을 생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠
+    안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다. HTML은 웹 브라우저와
+    같은 HTML 처리 장치의 행동에 영향을 주는 자바스크립트와 본문과 그 밖의 항목의 외관과 배치를
+    정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의
+    공동 책임자인 W3C는
+    명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.[1]
+
+  </p>
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://web1-hvojfu4cdq.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+  </p>
+  <p>
+
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5fd496caa8a254155ab29ce8/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
+</p>
 </html>
