--- a/1.html
+++ b/1.html
@@ -1,41 +1,46 @@
 <!doctype html>
 <html>
+
 <head>
-  <title>WEB1 - html</title>
+  <title>WEB1-HTML</title>
   <meta charset="utf-8">
 </head>
+
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li>.<a href="1.html">html</a></li>
-    <li>.<a href="2.html">CSS</a></li>
-    <li>.<a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Html</a></li>
+    <li><a href="2.html">Css</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
 
+  <h2>HTML</h2> -생활코딩 유튜버 강의 中-
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://web1-hvojfu4cdq.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-  <H2>HTML이란 무엇인가?</H2>
-  Major stock markets surged Monday in response, <strong><u>Kim hee san</u>
-  </strong> one week ago.<br><br><br><br>앞에있는 태그를 ''열리는태그'',
-  뒤에있는 태그를 ''닫히는 태그''라고 한다.
-  <h4>태그가무엇인지 알고있으면 모든태그를 알고있는것과 같다 ? 1분이면되니까</h4>
 
-  <img src="coding.jpg" width="50%">
-  <p><a href="https://www.w3.org/TR/html52/"
-  target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a>
-   is the blah~~
-  동해물과백두dd산이동해물과백두산이동해물과백두산이동해물과백두산이동해물과백두산이동
-  해물과백두산이동해물과백두산이동해물과백두산이동해물과백두산이동해물과백두산이동해물과백두
-  산이동해물과백두산이동해물과백두산이동해물과백두산이동해물과백두산이동해물과백두산이동해물
-  과백두산이동해물과백두산</p>
-  <p style="margin-top:45px;"> 태그를 쓰는것이 좋은 표현이다.단락이라는거를 의미론적으로
-  표현해줄수있기때문에
-  br 은 단지 줄바꿈 일 뿐인다.
 
-  각적으로 부족한부분은 css를 통해서 훨씬더 정교하게 표현할수있음 .. 쨋든 br 태그랑 p 태그 중요
+  </p>
 
-  너무 글만있다.. 이미지를 넣고싶다.
 
-  속성은 위치 상관없이 아무위치에나 쓰면 된다
-  위에 타이틀과 메타 는 본문을 설명한다.  바디라는 태그로 묶기로 약속함
 </body>
+
 </html>
