--- a/2.html
+++ b/2.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EDL9XRH0DP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-EDL9XRH0DP');
+</script>
 <head>
   <title>WEB1-CSS</title>
   <meta charset="utf-8">
